refactor(timeseries): drop ES/Postgres dual-write and exclusive SoT
Timeseries writes now go only through TimeseriesAspectService. Postgres
and Elasticsearch skip MCL DELETE the same way, and GMS/MAE fail fast
unless pgTimeseries enabled and implementation=postgres are set together.

Co-authored-by: Cursor <cursoragent@cursor.com>