@@ -5,15 +5,17 @@ import static org.mockito.ArgumentMatchers.anyBoolean;
 import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.doThrow;
-import static org.mockito.Mockito.inOrder;
 import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.mockStatic;
 import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 import static org.testng.Assert.assertFalse;
 import static org.testng.Assert.assertTrue;
+import static org.testng.Assert.expectThrows;
 
+import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.node.ObjectNode;
 import com.linkedin.common.AuditStamp;
 import com.linkedin.common.UrnArray;
@@ -37,7 +39,7 @@ import com.linkedin.metadata.search.elasticsearch.indexbuilder.ReindexConfig;
 import com.linkedin.metadata.search.transformer.SearchDocumentTransformer;
 import com.linkedin.metadata.systemmetadata.SystemMetadataService;
 import com.linkedin.metadata.timeseries.TimeseriesAspectService;
-import com.linkedin.metadata.timeseries.write.TimeseriesAspectWriteSink;
+import com.linkedin.metadata.timeseries.transformer.TimeseriesAspectTransformer;
 import com.linkedin.metadata.utils.elasticsearch.IndexConvention;
 import com.linkedin.mxe.MetadataChangeLog;
 import com.linkedin.mxe.SystemMetadata;
@@ -122,7 +124,6 @@ public class UpdateIndicesV2StrategyTest {
             elasticSearchService,
             searchDocumentTransformer,
             timeseriesAspectService,
-            TimeseriesAspectWriteSink.NOOP,
             "MD5",
             null, // No semantic search config for basic tests
             mock(IndexConvention.class),
@@ -472,7 +473,6 @@ public class UpdateIndicesV2StrategyTest {
             elasticSearchService,
             searchDocumentTransformer,
             timeseriesAspectService,
-            TimeseriesAspectWriteSink.NOOP,
             "MD5",
             semanticConfig,
             indexConvention,
@@ -499,7 +499,6 @@ public class UpdateIndicesV2StrategyTest {
             elasticSearchService,
             searchDocumentTransformer,
             timeseriesAspectService,
-            TimeseriesAspectWriteSink.NOOP,
             "MD5",
             semanticConfig,
             indexConvention,
@@ -531,7 +530,6 @@ public class UpdateIndicesV2StrategyTest {
             elasticSearchService,
             searchDocumentTransformer,
             timeseriesAspectService,
-            TimeseriesAspectWriteSink.NOOP,
             "MD5",
             semanticConfig,
             indexConvention,
@@ -562,7 +560,6 @@ public class UpdateIndicesV2StrategyTest {
             elasticSearchService,
             searchDocumentTransformer,
             timeseriesAspectService,
-            TimeseriesAspectWriteSink.NOOP,
             "MD5",
             semanticConfig,
             indexConvention,
@@ -593,7 +590,6 @@ public class UpdateIndicesV2StrategyTest {
             elasticSearchService,
             searchDocumentTransformer,
             timeseriesAspectService,
-            TimeseriesAspectWriteSink.NOOP,
             "MD5",
             semanticConfig,
             indexConvention,
@@ -630,7 +626,6 @@ public class UpdateIndicesV2StrategyTest {
             elasticSearchService,
             searchDocumentTransformer,
             timeseriesAspectService,
-            TimeseriesAspectWriteSink.NOOP,
             "MD5",
             semanticConfig,
             indexConvention,
@@ -730,7 +725,6 @@ public class UpdateIndicesV2StrategyTest {
             elasticSearchService,
             searchDocumentTransformer,
             timeseriesAspectService,
-            TimeseriesAspectWriteSink.NOOP,
             "MD5",
             semanticConfig,
             indexConvention,
@@ -774,7 +768,6 @@ public class UpdateIndicesV2StrategyTest {
             elasticSearchService,
             searchDocumentTransformer,
             timeseriesAspectService,
-            TimeseriesAspectWriteSink.NOOP,
             "MD5",
             semanticConfig,
             indexConvention,
@@ -983,82 +976,36 @@ public class UpdateIndicesV2StrategyTest {
   }
 
   @Test
-  public void testProcessBatch_timeseriesDeleteBeforeUpsert_preservesUpsertOrder()
-      throws Exception {
-    TimeseriesAspectWriteSink sink = mock(TimeseriesAspectWriteSink.class);
-    UpdateIndicesV2Strategy dualWriteStrategy =
-        new UpdateIndicesV2Strategy(
-            v2Config,
-            elasticSearchService,
-            searchDocumentTransformer,
-            timeseriesAspectService,
-            sink,
-            "MD5",
-            null,
-            mock(IndexConvention.class),
-            true,
-            mockMappingsBuilder,
-            null);
+  public void testProcessBatch_timeseriesJsonFailure_propagatesWhenFailLoud() throws Exception {
+    when(mockAspectSpec.isTimeseries()).thenReturn(true);
+    when(mockAspectSpec.getName()).thenReturn("datasetProfile");
+    when(mockEvent.getAspectName()).thenReturn("datasetProfile");
+    when(timeseriesAspectService.shouldPropagateWriteFailures()).thenReturn(true);
 
-    AspectSpec tsSpec = mock(AspectSpec.class);
-    when(tsSpec.getName()).thenReturn("datasetProfile");
-    when(tsSpec.isTimeseries()).thenReturn(true);
-    when(tsSpec.getTimeseriesFieldSpecs()).thenReturn(Collections.emptyList());
-    when(tsSpec.getTimeseriesFieldCollectionSpecs()).thenReturn(Collections.emptyList());
+    try (var transformer = mockStatic(TimeseriesAspectTransformer.class)) {
+      transformer
+          .when(() -> TimeseriesAspectTransformer.transform(any(), any(), any(), any(), any()))
+          .thenThrow(new JsonProcessingException("boom") {});
+      expectThrows(
+          IllegalStateException.class,
+          () -> strategy.processBatch(operationContext, groupedFor(List.of(mockEvent)), false));
+    }
+  }
 
-    DataMap prevData = new DataMap();
-    prevData.put("timestampMillis", 1_000_000_000L);
-    RecordTemplate prevAspect = mock(RecordTemplate.class);
-    when(prevAspect.data()).thenReturn(prevData);
+  @Test
+  public void testProcessBatch_timeseriesJsonFailure_continuesWhenSoftMode() throws Exception {
+    when(mockAspectSpec.isTimeseries()).thenReturn(true);
+    when(mockAspectSpec.getName()).thenReturn("datasetProfile");
+    when(mockEvent.getAspectName()).thenReturn("datasetProfile");
 
-    DataMap upsertData = new DataMap();
-    upsertData.put("timestampMillis", 1_000_001_000L);
-    RecordTemplate upsertAspect = mock(RecordTemplate.class);
-    when(upsertAspect.data()).thenReturn(upsertData);
-
-    MCLItem deleteEvent =
-        makeEvent("datasetProfile", tsSpec, null, prevAspect, "run-1", ChangeType.DELETE);
-    MCLItem upsertEvent =
-        makeEvent("datasetProfile", tsSpec, upsertAspect, null, "run-1", ChangeType.UPSERT);
-
-    when(timeseriesAspectService.applyDocumentDeleteOnMclDelete()).thenReturn(true);
-    when(searchDocumentTransformer.transformAspect(
-            any(OperationContext.class),
-            any(Urn.class),
-            any(RecordTemplate.class),
-            any(AspectSpec.class),
-            eq(false),
-            any(AuditStamp.class)))
-        .thenReturn(Optional.empty());
-
-    dualWriteStrategy.processBatch(
-        operationContext, groupedFor(List.of(deleteEvent, upsertEvent)), false);
-
-    org.mockito.InOrder inOrder = inOrder(timeseriesAspectService, sink);
-    inOrder
-        .verify(timeseriesAspectService)
-        .deleteDocument(
-            any(OperationContext.class),
-            anyString(),
-            anyString(),
-            anyString(),
-            any(),
-            anyBoolean());
-    inOrder
-        .verify(sink)
-        .deleteDocument(
-            any(OperationContext.class),
-            anyString(),
-            anyString(),
-            anyString(),
-            any(),
-            anyBoolean());
-    inOrder
-        .verify(timeseriesAspectService)
-        .upsertDocument(any(OperationContext.class), anyString(), anyString(), anyString(), any());
-    inOrder
-        .verify(sink)
-        .upsertDocument(any(OperationContext.class), anyString(), anyString(), anyString(), any());
+    try (var transformer = mockStatic(TimeseriesAspectTransformer.class)) {
+      transformer
+          .when(() -> TimeseriesAspectTransformer.transform(any(), any(), any(), any(), any()))
+          .thenThrow(new JsonProcessingException("boom") {});
+      strategy.processBatch(operationContext, groupedFor(List.of(mockEvent)), false);
+    }
+    verify(timeseriesAspectService, never())
+        .upsertDocument(any(), anyString(), anyString(), anyString(), any());
   }
 
   @Test
@@ -1100,7 +1047,6 @@ public class UpdateIndicesV2StrategyTest {
             elasticSearchService,
             searchDocumentTransformer,
             timeseriesAspectService,
-            TimeseriesAspectWriteSink.NOOP,
             "MD5",
             null,
             mock(IndexConvention.class),
@@ -1321,7 +1267,6 @@ public class UpdateIndicesV2StrategyTest {
         elasticSearchService,
         searchDocumentTransformer,
         timeseriesAspectService,
-        TimeseriesAspectWriteSink.NOOP,
         "MD5",
         null,
         mock(IndexConvention.class),
@@ -1395,51 +1340,6 @@ public class UpdateIndicesV2StrategyTest {
     // Timeseries index write should be suppressed
     verify(timeseriesAspectService, never())
         .upsertDocument(any(OperationContext.class), anyString(), anyString(), anyString(), any());
-  }
-
-  @Test
-  public void testThrottle_TimeseriesDeleteSuppressesTimeseriesWriteWhenThrottled()
-      throws Exception {
-    TimeseriesWriteThrottleCache cache = buildThrottleCache(false, true, false);
-    TimeseriesAspectWriteSink sink = mock(TimeseriesAspectWriteSink.class);
-    UpdateIndicesV2Strategy throttledStrategy =
-        new UpdateIndicesV2Strategy(
-            v2Config,
-            elasticSearchService,
-            searchDocumentTransformer,
-            timeseriesAspectService,
-            sink,
-            "MD5",
-            null,
-            mock(IndexConvention.class),
-            true,
-            mockMappingsBuilder,
-            cache);
-
-    when(mockAspectSpec.isTimeseries()).thenReturn(true);
-    when(mockAspectSpec.getName()).thenReturn("datasetProfile");
-    when(timeseriesAspectService.applyDocumentDeleteOnMclDelete()).thenReturn(false);
-
-    MCLItem deleteEvent = mock(MCLItem.class);
-    when(deleteEvent.getUrn()).thenReturn(testUrn);
-    when(deleteEvent.getEntitySpec()).thenReturn(mockEntitySpec);
-    when(deleteEvent.getAspectSpec()).thenReturn(mockAspectSpec);
-    when(deleteEvent.getChangeType()).thenReturn(ChangeType.DELETE);
-    when(deleteEvent.getPreviousRecordTemplate()).thenReturn(null);
-    when(deleteEvent.getAspectName()).thenReturn("datasetProfile");
-    when(deleteEvent.getAuditStamp()).thenReturn(mockAuditStamp);
-    MetadataChangeLog deleteMcl = mock(MetadataChangeLog.class);
-    when(deleteMcl.getChangeType()).thenReturn(ChangeType.DELETE);
-    when(deleteEvent.getMetadataChangeLog()).thenReturn(deleteMcl);
-
-    cache.recordWrite(testUrn.toString(), "datasetProfile", 1_000_000_000L);
-    when(mockAuditStamp.getTime()).thenReturn(1_000_001_000L);
-
-    throttledStrategy.processBatch(operationContext, groupedFor(List.of(deleteEvent)), false);
-
-    verify(sink, never())
-        .deleteByUrn(
-            eq(operationContext), eq("dataset"), eq("datasetProfile"), eq(testUrn.toString()));
   }
 
   @Test
@@ -1666,174 +1566,6 @@ public class UpdateIndicesV2StrategyTest {
     when(mcl.getChangeType()).thenReturn(changeType);
     when(event.getMetadataChangeLog()).thenReturn(mcl);
     return event;
-  }
-
-  @Test
-  public void testUpdateTimeseriesFields_dualWritesToServiceAndSink() throws Exception {
-    TimeseriesAspectWriteSink sink = mock(TimeseriesAspectWriteSink.class);
-    UpdateIndicesV2Strategy dualWriteStrategy =
-        new UpdateIndicesV2Strategy(
-            v2Config,
-            elasticSearchService,
-            searchDocumentTransformer,
-            timeseriesAspectService,
-            sink,
-            "MD5",
-            null,
-            mock(IndexConvention.class),
-            true,
-            mockMappingsBuilder,
-            null);
-
-    when(mockAspectSpec.isTimeseries()).thenReturn(true);
-    when(mockAspectSpec.getName()).thenReturn("datasetProfile");
-    when(mockAspectSpec.getTimeseriesFieldSpecs()).thenReturn(Collections.emptyList());
-    when(mockAspectSpec.getTimeseriesFieldCollectionSpecs()).thenReturn(Collections.emptyList());
-    when(mockEvent.getAspectName()).thenReturn("datasetProfile");
-    DataMap tsData = new DataMap();
-    tsData.put("timestampMillis", 1_000_001_000L);
-    when(mockAspect.data()).thenReturn(tsData);
-
-    dualWriteStrategy.updateTimeseriesFields(
-        operationContext, Collections.singletonList(mockEvent));
-
-    verify(timeseriesAspectService)
-        .upsertDocument(any(OperationContext.class), anyString(), anyString(), anyString(), any());
-    verify(sink)
-        .upsertDocument(any(OperationContext.class), anyString(), anyString(), anyString(), any());
-  }
-
-  @Test
-  public void testDeleteTimeseriesFields_sinkAlways_serviceWhenApplyDeleteTrue() {
-    TimeseriesAspectWriteSink sink = mock(TimeseriesAspectWriteSink.class);
-    UpdateIndicesV2Strategy dualWriteStrategy =
-        new UpdateIndicesV2Strategy(
-            v2Config,
-            elasticSearchService,
-            searchDocumentTransformer,
-            timeseriesAspectService,
-            sink,
-            "MD5",
-            null,
-            mock(IndexConvention.class),
-            true,
-            mockMappingsBuilder,
-            null);
-
-    when(mockAspectSpec.isTimeseries()).thenReturn(true);
-    when(mockAspectSpec.getName()).thenReturn("datasetProfile");
-    when(mockAspectSpec.getTimeseriesFieldSpecs()).thenReturn(Collections.emptyList());
-    when(mockAspectSpec.getTimeseriesFieldCollectionSpecs()).thenReturn(Collections.emptyList());
-    when(mockEvent.getChangeType()).thenReturn(ChangeType.DELETE);
-    when(mockEvent.getAspectName()).thenReturn("datasetProfile");
-    when(mockEvent.getPreviousRecordTemplate()).thenReturn(mockPreviousAspect);
-    when(mockEvent.getPreviousSystemMetadata()).thenReturn(mockSystemMetadata);
-    DataMap tsData = new DataMap();
-    tsData.put("timestampMillis", 1_000_001_000L);
-    when(mockPreviousAspect.data()).thenReturn(tsData);
-    when(timeseriesAspectService.applyDocumentDeleteOnMclDelete()).thenReturn(true);
-
-    dualWriteStrategy.deleteTimeseriesFieldsForDeleteEvent(operationContext, mockEvent);
-
-    verify(timeseriesAspectService)
-        .deleteDocument(
-            any(OperationContext.class),
-            anyString(),
-            anyString(),
-            anyString(),
-            any(),
-            anyBoolean());
-    verify(sink)
-        .deleteDocument(
-            any(OperationContext.class),
-            anyString(),
-            anyString(),
-            anyString(),
-            any(),
-            anyBoolean());
-  }
-
-  @Test
-  public void testDeleteTimeseriesFields_skipsServiceDeleteWhenApplyFalse() {
-    TimeseriesAspectWriteSink sink = mock(TimeseriesAspectWriteSink.class);
-    UpdateIndicesV2Strategy dualWriteStrategy =
-        new UpdateIndicesV2Strategy(
-            v2Config,
-            elasticSearchService,
-            searchDocumentTransformer,
-            timeseriesAspectService,
-            sink,
-            "MD5",
-            null,
-            mock(IndexConvention.class),
-            true,
-            mockMappingsBuilder,
-            null);
-
-    when(mockAspectSpec.isTimeseries()).thenReturn(true);
-    when(mockAspectSpec.getName()).thenReturn("datasetProfile");
-    when(mockAspectSpec.getTimeseriesFieldSpecs()).thenReturn(Collections.emptyList());
-    when(mockAspectSpec.getTimeseriesFieldCollectionSpecs()).thenReturn(Collections.emptyList());
-    when(mockEvent.getChangeType()).thenReturn(ChangeType.DELETE);
-    when(mockEvent.getAspectName()).thenReturn("datasetProfile");
-    when(mockEvent.getPreviousRecordTemplate()).thenReturn(mockPreviousAspect);
-    when(mockEvent.getPreviousSystemMetadata()).thenReturn(mockSystemMetadata);
-    DataMap tsData = new DataMap();
-    tsData.put("timestampMillis", 1_000_001_000L);
-    when(mockPreviousAspect.data()).thenReturn(tsData);
-    when(timeseriesAspectService.applyDocumentDeleteOnMclDelete()).thenReturn(false);
-
-    dualWriteStrategy.deleteTimeseriesFieldsForDeleteEvent(operationContext, mockEvent);
-
-    verify(timeseriesAspectService, never())
-        .deleteDocument(
-            any(OperationContext.class),
-            anyString(),
-            anyString(),
-            anyString(),
-            any(),
-            anyBoolean());
-    verify(sink)
-        .deleteDocument(
-            any(OperationContext.class),
-            anyString(),
-            anyString(),
-            anyString(),
-            any(),
-            anyBoolean());
-  }
-
-  @Test
-  public void testDeleteTimeseriesFields_previousNull_esSot_callsSinkDeleteByUrn() {
-    TimeseriesAspectWriteSink sink = mock(TimeseriesAspectWriteSink.class);
-    UpdateIndicesV2Strategy dualWriteStrategy =
-        new UpdateIndicesV2Strategy(
-            v2Config,
-            elasticSearchService,
-            searchDocumentTransformer,
-            timeseriesAspectService,
-            sink,
-            "MD5",
-            null,
-            mock(IndexConvention.class),
-            true,
-            mockMappingsBuilder,
-            null);
-
-    when(mockAspectSpec.isTimeseries()).thenReturn(true);
-    when(mockAspectSpec.getName()).thenReturn("datasetProfile");
-    when(mockEvent.getChangeType()).thenReturn(ChangeType.DELETE);
-    when(mockEvent.getAspectName()).thenReturn("datasetProfile");
-    when(mockEvent.getPreviousRecordTemplate()).thenReturn(null);
-    when(timeseriesAspectService.applyDocumentDeleteOnMclDelete()).thenReturn(false);
-
-    dualWriteStrategy.deleteTimeseriesFieldsForDeleteEvent(operationContext, mockEvent);
-
-    verify(timeseriesAspectService, never())
-        .deleteAspectValues(any(), anyString(), anyString(), any());
-    verify(sink)
-        .deleteByUrn(
-            eq(operationContext), eq("dataset"), eq("datasetProfile"), eq(testUrn.toString()));
   }
 
   // ---------------------------------------------------------------------------------------------
